# society

./: .gitignore  CMakeLists.txt  LICENSE  README.md  plan.txt
assets/install/: app.json  earth.json
src/: CMakeLists.txt  app.c  app.h  main.c
src/hdronly/: hdronly.c  jquick.h  nuklear_sdl_renderer.h
src/misc/: vc.cpp
src/model/: ai.c  ai.h  gen.c  gen.h  icon.c  icon.h  path.c  path.h  rand.c  rand.h  serial.c  serial.h  types.h  world.c  world.h
src/view/: menu.c  menu.h  run.c  tileset.c  tileset.h  view.c  view.h
